--- a/webcourse/front/index.html
+++ b/webcourse/front/index.html
@@ -12,10 +12,18 @@
     <h1>Welcome</h1>
     <p id="greeting">Hello world!</p>
     <input type="text" id="inputMessage" name="inputMessage">
-
-    <button id="changeMessage" onclick="changeButtonText()">Change Message</button>
+    <button id="changeMessage">Change Message</button>
+    <br>
     <button id="incrementCounterButton"> Increment </button>
     <p id="incrementCounter"><span>0</span></p>
+
+    <form id="nameForm">
+        <label for="name">Enter your name</label>
+        <input type="text" id="name" name = "name" required>
+        <button type="submit">Submit</button>
+    </form>
+
+    <p id="serverResponse"></p>
 <script src="js/script.js" ></script>
 </body>
 </html>
